Resolves: tdf#92709 conditional formats are applied to ranges, not expressions

Hence we need a separate string as header in the dialog. Unfortunately I
did not see this when applying 0cf38e7d0c5d2b67dca828aae1797bff58b6c5fe

Change-Id: Ib60cef29e663e71a25849df1d5a926f0e871bb8b
(cherry picked from commit ffebdead5445dffd60fb09382e69701d8a06cfc8)
Reviewed-on: https://gerrit.libreoffice.org/17239
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>